3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/init.c: there's a #define LOGFILE, use it instead of hardcoded value.
include/config.h: change default logfile path to previous value in init.c.
server/c_wiz.c: Fix 'nodm' displaying incorrect messages, and forgetting to
   update player count on map.
Ryo 2004-05-08

server/apply.c: Fix apply_special() to properly deal with LAMP objects - it
   wasn't dealing properly with the split off lamp compared to the one it
   was supposed to deal with - was crashing server.
MSW 2004-05-04

common/item.c: describe_monster() - print luck when describing players (fixex
   perceive self not showing luck)
server/attack.c: kill_object() - don't give player exp if he kills himself -
   compare owner against what was killed, not the hitter.
server/pets.c: summon_object() - move breaking out for last treasurelist
   after we set the last valid treasurelist - otherwise, the list entry for
   the treasurelist was never used.  Change summoned creatures so that
   the items they have are god given, and thus disappear when they
   are killed - prevents players from summoning and then looting their pets.
server/spell_attack.c: explode_bullet() - Get owner of the spell so that we
   can properly tailor the explosion portion of the spell for the god
   of the worshipper.
MSW 2004-05-03

server/shop.c: patch from Andreas Kirschbaum for Windows compilation.
server/spell_effect.c: patch from Andreas Kirschbaum for Windows compilation.
Ryo 2004-05-03

common/porting: changed open_and_uncompress to use const char* instead of
   char*, since value shouldn't be changed (and isn't).
include/libproto.h: changed prototype for open_and_uncompress