@@ -133,6 +133,11 @@
 #define STAT_LOSS_ON_DEATH FALSE
 #define CASTING_TIME FALSE
 #define SET_FRIENDLY_FIRE 5
+#define ARMOR_MAX_ENCHANT   5
+#define ARMOR_WEIGHT_REDUCTION  10
+#define ARMOR_WEIGHT_LINEAR TRUE
+#define ARMOR_SPEED_IMPROVEMENT 10
+#define ARMOR_SPEED_LINEAR  TRUE
 
 /* you can edit the ones below */
 
